--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
                 <a class="nav-item nav-link text-primary" href="./contact.html">Contact</a>
             </li>
 
-            <li class="nav-item dropdown">
+            <!-- <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle nav-link text-primary" href="#" id="navbarDropdown" role="button"
                     data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Related Links
@@ -80,10 +80,10 @@
                         target="_blank">DOR/Digest
                         Consolidation</a>
                 </div>
-            </li>
+            </li> -->
         </ul>
         <ul class="nav navbar-nav navbar-right">
-            <li> <a class="text-decoration-none text-primary" href="https://www.instagram.com/gmass_consulting/"
+            <li> <a class="text-decoration-none text-primary" href="#"
                     target="_blank"><i class="fab fa-instagram fa-2x"></i>
 
                 </a></li>
@@ -103,11 +103,9 @@
                     <p id="contactUsHeader">CONTACT US</p>
                     <p class="lead font-weight-bold"></p>
                     <hr class="my-4">
-                    We are so glad you are interested in LMC. Please direct all inquiries to <a
-                        href="mailto:info@gmass.net" class="text-decoration-none">info@lmc</a> and
+                    We are so glad you are interested in us. Please direct all inquiries to <a
+                        href="mailto:info@mccormicksolutions.com" class="text-decoration-none">info@mccormicksolutions.com</a> and
                     a member from our leadership team will be in touch.<br><br>
-                    If you are here for online support, please direct your questions to <a
-                        href="mailto:support@gmass.net" class="text-decoration-none">support@lmc</a>.</p>
                     <!-- <p class="lead">
                                 <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
                             </p> -->
@@ -116,7 +114,7 @@
             </div>
             <div class="col-md-6 pr-4 m-0" style="overflow-x: hidden;">
                 <div class="table-wrapper-scroll-y my-custom-scrollbar">
-                    <table id="countyMount" class="table  table-dark">
+                    <table id="countyMount" class="table  table-light">
 
                         <thead class="thead-dark">
                             <tr>
