--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <a class="nav-item nav-link text-primary" href="./contact.html">Contact</a>
           </li>
       
-          <li class="nav-item dropdown">
+          <!-- <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle nav-link text-primary" href="#" id="navbarDropdown" role="button"
               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Related Links
@@ -89,10 +89,10 @@
                 target="_blank">DOR/Digest
                 Consolidation</a>
             </div>
-          </li>
+          </li> -->
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          <li> <a class="text-decoration-none text-primary" href="https://www.instagram.com/gmass_consulting/" target="_blank"><i
+          <li> <a class="text-decoration-none text-primary" href="#" target="_blank"><i
                 class="fab fa-instagram fa-2x"></i>
 
             </a></li>
@@ -111,7 +111,7 @@
           >
           <!-- <div class="carousel-item active min-vh-100 bg-white" style="opacity:.8"> -->
           <img id="logoDisplay" class="mx-auto d-block"  height="100px" width="auto"
-            src="./logo.png">
+            src="./logo.png" style="opacity: .9">
           <div class="carousel-caption d-md-block logoCap">
             <!-- <h4>LMC, Inc</h4> -->
             <p class="text-primary">Consulting made easy.</p>
