--- a/services.html
+++ b/services.html
@@ -44,7 +44,7 @@
                 <a class="nav-item nav-link text-primary" href="./contact.html">Contact</a>
             </li>
 
-            <li class="nav-item dropdown">
+            <!-- <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle nav-link text-primary" href="#" id="navbarDropdown" role="button"
                     data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Related Links
@@ -83,10 +83,10 @@
                         target="_blank">DOR/Digest
                         Consolidation</a>
                 </div>
-            </li>
+            </li> -->
         </ul>
         <ul class="nav navbar-nav navbar-right">
-            <li> <a class="text-decoration-none text-primary" href="https://www.instagram.com/gmass_consulting/"
+            <li> <a class="text-decoration-none text-primary" href="#"
                     target="_blank"><i class="fab fa-instagram fa-2x"></i>
 
                 </a></li>
@@ -194,7 +194,7 @@
                                     <p>Advanced online mapping to display live information straight from your
                                         database.<br>
                                         Make a change and see it reflected on the next click.</p>
-                                    <img src="assets/map.gif" class="img-fluid" style="max-height:50vh">
+                                    <!-- <img src="assets/map.gif" class="img-fluid" style="max-height:50vh"> -->
                                 </div>
                             </div>
 
@@ -384,7 +384,7 @@
             <div class="row m-0 mt-2 text-center">
                 <div class="col-sm-4 col-xs-12 mx-auto text-center mt-2 mb-2">
                     <h5 class="serviceTitle">Websites</h5>
-                    <p class="serviceDescrip">
+                    <!-- <p class="serviceDescrip">
                         LMC is excited to announce our development platform. Our websites are custom made -
                         meaning the client has all the say in the
                         aesthetics of their website as well as functionality. Not to mention - we optimize your
@@ -398,11 +398,11 @@
                         <div class="col-md-6">
                             <img class="demo" src="./assets/portfolio/website_mobile.jpg">
                         </div>
-                    </div>
+                    </div> -->
                 </div>
                 <div class="col-sm-4 col-xs-12 mx-auto text-center mt-2 mb-2">
                     <h5 class="serviceTitle">Custom Apps</h5>
-                    <p class="serviceDescrip">
+                    <!-- <p class="serviceDescrip">
                         Feeling limited by the constraints of in house resources? Tired of downloading countless
                         apps
                         from the app store? If so, you are in the right place.
@@ -429,7 +429,7 @@
 
                             </video>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
             <!-- <ul class="list-unstyled">
