--- a/about.html
+++ b/about.html
@@ -168,7 +168,7 @@
                             </div>
                             <!-- ./Team member -->
                             <!-- Team member -->
-                            <div class="col-xs-12 col-sm-6 col-md-4">
+                            <!-- <div class="col-xs-12 col-sm-6 col-md-4">
                                 <div class="image-flip" ontouchstart="this.classList.toggle('hover');">
                                     <div class="mainflip">
                                         <div class="frontside">
@@ -224,7 +224,7 @@
                                         </div>
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
                             <!-- ./Team member -->
                             <!-- Team member -->
                             <div class="col-xs-12 col-sm-6 col-md-4">
