--- a/landing.html
+++ b/landing.html
@@ -48,7 +48,7 @@
                     <span class="icon-bar bar2"></span>
                     <span class="icon-bar bar3"></span>
                 </button>
-                <a href="http://www.creative-tim.com" class="navbar-brand">
+                <a href="http://www.mccormicksolutions.com" class="navbar-brand">
                     <img src="logo.png" width="auto" height="40" alt="LMC Logo">
                 </a>
             </div>
