--- a/contact2.html
+++ b/contact2.html
@@ -78,9 +78,9 @@
                     <div class="row" style="margin:0 auto">
 
 
-                        <div class="col-xs-12 text-center" style="margin:0 auto">
-                            <div class="row" style="max-width:50%; margin:0 auto">
-                                <div class="col-xs-12" style="margin:0 auto !important">
+                        <div class="col-xs-12 text-center">
+                            <div class="row text-center">
+                                <div class="col-xs-12 col-sm-6 col-sm-offset-3 text-center">
                                     <p class="text-danger">
                                         Thanks for your interest in McCormick Solutions. Use the icon below to draft up
                                         an
