--- a/contact.html
+++ b/contact.html
@@ -2,157 +2,147 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
-        integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+    <meta charset="utf-8" />
+    <link rel="apple-touch-icon" sizes="76x76" href="assets/img/apple-icon.png">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <title>McCormick Solutions</title>
+    <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
+    <link href="assets/css/bootstrap.css" rel="stylesheet" />
+    <link href="assets/css/gaia.css" rel="stylesheet" />
+    <link rel="icon" type="image/png" href="logo.png">
 
-
-    <link rel="stylesheet" type="text/css" href="gmass.css">
-    <link rel="icon" href="logo.png">
-    <title>Contact Us</title>
+    <!--     Fonts and icons     -->
+    <link href='https://fonts.googleapis.com/css?family=Cambo|Poppins:400,600' rel='stylesheet' type='text/css'>
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
+    <link href="assets/css/fonts/pe-icon-7-stroke.css" rel="stylesheet">
+    <link href="./icons.css" rel="stylesheet">
 </head>
-<nav class="navbar navbar-light navbar-expand-lg" role="navigation">
-    <a class="navbar-brand" href="./index.html">
-        <img src="logo.png" width="auto" height="40" alt="LMC Logo">
-    </a>
-    <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
-        aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-            <li class="nav-item active">
-                <a class="nav-item nav-link active text-primary" href="./index.html">Home
-                    <span class="sr-only">(current)</span>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-item nav-link text-primary" href="./about.html">About</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-item nav-link text-primary" href="./services.html">Services</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-item nav-link text-primary" href="./contact.html">Contact</a>
-            </li>
-
-            <!-- <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle nav-link text-primary" href="#" id="navbarDropdown" role="button"
-                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Related Links
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <div class="dropdown-divider">LMC Links</div>
-                    <a href="ftp://ftp.gmass.net/" class="dropdown-item" target="_blank">FTP</a>
-                    <a href="https://accounts.logme.in/login.aspx" class="dropdown-item" target="_blank">Remote
-                        Desktop</a>
-                    <a href="https://sso.godaddy.com/login?realm=pass&app=email" class="dropdown-item"
-                        target="_blank">Employee
-                        Email</a>
-                    <a href="https://www.arcgis.com/home/group.html?id=4868c749ef4846c19debfc4f8a5d5565#overview"
-                        class="dropdown-item" target="_blank">Mobile
-                        Web Maps</a>
-                    <div class="dropdown-divider">Industry Links</div>
-                    <a href="http://www.accg.org/" class="dropdown-item" target="_blank">ACCG
-                        <small>Association
-                            of County Commisioners of Georgia</small></a>
-                    <a href="http://www.gaao.org/" class="dropdown-item" target="_blank">GAAO <small>Georgia
-                            Association of Assessing Officials</small></a>
-                    <a href="https://dor.georgia.gov/" class="dropdown-item" target="_blank">Georgia
-                        Department of Revenue</a>
-                    <a href="http://www.greab.state.ga.us/" class="dropdown-item" target="_blank">GREAB
-                        <small>Georgia
-                            Real Estate Appraisers Board</small></a>
-                    <a href="http://www.wingap.com/" class="dropdown-item" target="_blank">WinGAP
-                        <small>Windows
-                            Georgia Appraisal Program</small></a>
-                    <a href="https://data.georgiaspatial.org/" class="dropdown-item" target="_blank">Georgia
-                        GIS Clearinghouse <small>Free GIS Data</small></a>
-                    <a href="https://www.arcgis.com/home/search.html?q=gmass&t=groups&showFilters=false&start=1&sortOrder=true&sortField=relevance"
-                        class="dropdown-item" target="_blank">ArcGIS Online <small>Online Mapping
-                            Portal</small></a>
-                    <a href="https://apps.dor.ga.gov/digestconsolidation/default.aspx" class="dropdown-item"
-                        target="_blank">DOR/Digest
-                        Consolidation</a>
-                </div>
-            </li> -->
-        </ul>
-        <ul class="nav navbar-nav navbar-right">
-            <li> <a class="text-decoration-none text-primary" href="#"
-                    target="_blank"><i class="fab fa-instagram fa-2x"></i>
-
-                </a></li>
-        </ul>
-    </div>
-</nav>
-<!-- Test -->
-<!--Test2-->
 
 <body>
-    <div class="container-fluid p-2 mt-5 mb-3 ">
-        <div class="row m-0">
-            <div class="col-md-6 text-center">
-                <div class="jumbotron bg-white">
 
-                    <img class="img-fluid rounded mb-1" height='auto' width="200" src="logo.png">
-                    <p id="contactUsHeader">CONTACT US</p>
-                    <p class="lead font-weight-bold"></p>
-                    <hr class="my-4">
-                    We are so glad you are interested in us. Please direct all inquiries to <a
-                        href="mailto:info@mccormicksolutions.com" class="text-decoration-none">info@mccormicksolutions.com</a> and
-                    a member from our leadership team will be in touch.<br><br>
-                    <!-- <p class="lead">
-                                <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-                            </p> -->
+    <nav class="navbar navbar-default navbar-transparent navbar-fixed-top" color-on-scroll="200">
+        <!-- if you want to keep the navbar hidden you can add this class to the navbar "navbar-burger"-->
+        <div class="container">
+            <div class="navbar-header">
+                <button id="menu-toggle" type="button" class="navbar-toggle" data-toggle="collapse"
+                    data-target="#example">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar bar1"></span>
+                    <span class="icon-bar bar2"></span>
+                    <span class="icon-bar bar3"></span>
+                </button>
+                <a href="http://www.mccormicksolutions.com" class="navbar-brand">
+                    <img src="logo.png" width="auto" height="40" alt="LMC Logo">
+                </a>
+            </div>
+            <div class="collapse navbar-collapse">
+                <ul class="nav navbar-nav navbar-right navbar-uppercase">
+                    <li>
+                        <a href="./about.html">About</a>
+                    </li>
+                    <li>
+                        <a href="./services.html">Services</a>
+                    </li>
+                    <!-- <li class="dropdown">
+                        <a href="#gaia" class="dropdown-toggle" data-toggle="dropdown">
+                            <i class="fa fa-share-alt"></i> Share
+                        </a>
+                        <ul class="dropdown-menu dropdown-danger">
+                            <li>
+                                <a href="#"><i class="fa fa-facebook-square"></i> Facebook</a>
+                            </li>
+                            <li>
+                                <a href="#"><i class="fa fa-twitter"></i> Twitter</a>
+                            </li>
+                            <li>
+                                <a href="#"><i class="fa fa-instagram"></i> Instagram</a>
+                            </li>
+                        </ul>
+                    </li> -->
+                    <li>
+                        <a href="./contact2.html" class="btn btn-danger btn-fill">Contact Us</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+    </nav>
+
+
+    <div class="section section-header">
+        <div class="parallax filter ">
+            <div class="image" style="background-image: url('assets/img/athens-aerial.jpg')">
+            </div>
+            <div class="container">
+                <div class="content" style="margin:0 auto">
+                    <div class="row" style="margin:0 auto">
+
+
+                        <div class="col-xs-12 text-center">
+                            <div class="row text-center">
+                                <div class="col-xs-12 col-sm-6 col-sm-offset-3 text-center">
+                                    <p class="text-danger">
+                                        Thanks for your interest in McCormick Solutions. Use the icon below to draft up
+                                        an
+                                        email
+                                        providing contact information and a brief summary of your needs. A member from
+                                        our
+                                        team
+                                        will be in touch shortly!
+                                        </a></span>
+                                    </p>
+                                    <a class="contactIcon" href="mailto:info@mccormicksolutions.com"> <i
+                                            class="fa fa-envelope"></i></a>
+                                </div>
+                            </div>
+
+
+                        </div>
+                    </div>
+
+                    <!-- <div class="col-xs-6">
+                        <i class="fa fa-instagram"></i>
+                    </div> -->
+
+
+
                 </div>
 
-            </div>
-            <div class="col-md-6 pr-4 m-0" style="overflow-x: hidden;">
-                <div class="table-wrapper-scroll-y my-custom-scrollbar">
-                    <table id="countyMount" class="table  table-light">
-
-                        <thead class="thead-dark">
-                            <tr>
-                                <th scope="col">County Name</th>
-                                <th scope="col">Website</th>
-
-                            </tr>
-                        </thead>
-                        <tbody>
-                </div>
-            </div>
-
-        </div>
-    </div>
-    <!-- <div class="container">
-        <div class="row">
-            <div class="col-lg-12">
-                <h1 class="text-center">Georgia Assessor's Contact Information</h1>
-                
 
             </div>
         </div>
-    </div> -->
     </div>
 
 
 
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"
-        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
-        integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
-        crossorigin="anonymous"></script>
-    <script src="./app.js"></script>
 
-    <footer class="fixed-bottom text-center bg-light border-top border-dark mt-2 p-2">
-        <h6 class="text-center text-primary font-weight-bold">LMC, Inc. 2019 &copy;</h6>
+
+
+    <footer class="footer footer-big footer-color-black" data-color="black">
+        <div class="container">
+            <!-- <div class="row">
+            </div>
+            <hr> -->
+            <div class="copyright">
+                ©
+                <script> document.write(new Date().getFullYear()) </script> McCormick Solutions
+            </div>
+        </div>
     </footer>
+
 </body>
 
+<!--   core js files    -->
+<script src="assets/js/jquery.min.js" type="text/javascript"></script>
+<script src="assets/js/bootstrap.js" type="text/javascript"></script>
+
+<!--  js library for devices recognition -->
+<script type="text/javascript" src="assets/js/modernizr.js"></script>
+
+<!--  script for google maps   -->
+<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script>
+
+<!--   file where we handle all the script from the Gaia - Bootstrap Template   -->
+<script type="text/javascript" src="assets/js/gaia.js"></script>
 
 </html>
