--- a/index.html
+++ b/index.html
@@ -94,9 +94,10 @@
                 <div class="content">
                     <div class="title-area">
                         <p></p>
-                        <!-- <h1 class="title-modern">McCormick</h1> -->
                         <img class="img-fluid" height="100vh" width="auto" src="./logo.png" />
-                        <h3>Your neighborhood Appraisal & Tech Consultants</h2>
+                        
+                        <h1 class="title-modern">McCormick & King</h1>
+                        <!-- <h3>Your neighborhood Appraisal & Tech Consultants</h3> -->
                             <div class="separator line-separator">♦</div>
                     </div>
 
@@ -177,7 +178,7 @@
                         <div class="row">
                             <div class="col-md-12 ">
                                 <div class="row">
-                                    <div class="col-md-4">
+                                    <div class="col-md-3">
                                         <div class="card card-member">
                                             <div class="content">
                                                 <div class="avatar avatar-danger">
@@ -193,7 +194,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <!-- <div class="col-md-3">
+                                    <div class="col-md-3">
                                         <div class="card card-member">
                                             <div class="content">
                                                 <div class="avatar avatar-danger">
@@ -208,8 +209,8 @@
                                                 </div>
                                             </div>
                                         </div>
-                                    </div> -->
-                                    <div class="col-md-4">
+                                    </div>
+                                    <div class="col-md-3">
                                         <div class="card card-member">
                                             <div class="content">
                                                 <div class="avatar avatar-danger">
@@ -225,7 +226,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-md-4">
+                                    <div class="col-md-3">
                                         <div class="card card-member">
                                             <div class="content">
                                                 <div class="avatar avatar-danger">
