--- a/services.html
+++ b/services.html
@@ -15,6 +15,7 @@
     <link href='https://fonts.googleapis.com/css?family=Cambo|Poppins:400,600' rel='stylesheet' type='text/css'>
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
     <link href="assets/css/fonts/pe-icon-7-stroke.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Audiowide&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -31,7 +32,7 @@
                     <span class="icon-bar bar3"></span>
                 </button>
                 <a href="http://www.mccormicksolutions.com" class="navbar-brand">
-                    <img src="logo.png" width="auto" height="40" alt="LMC Logo">
+                    <img src="logo.png" width="auto" height="30" alt="LMC Logo">
                 </a>
             </div>
             <div class="collapse navbar-collapse">
@@ -70,7 +71,7 @@
 
     <div class="section section-header">
         <div class="parallax filter ">
-            <div class="image" style="background-color: red">
+            <div class="image" style="background-color: gray">
             </div>
             <div class="container">
                 <div class="content">
@@ -78,10 +79,10 @@
                         <p></p>
 
                         <img class="img-fluid" height="100vh" width="auto" src="./logo.png" />
-                        <h3>Services & Solutions</h2>
+                        <h3 style="font-family: 'Audiowide',cursive; font-size:100%;">APPRAISALS | ANALYTICS</h3>
                             <div class="separator line-separator">♦</div>
                             <p class="description">
-                                Our goal is to be the only solutions consultants you will ever need.
+                               We've got your back
                             </p>
                     </div>
                 </div>
@@ -146,7 +147,8 @@
             <div class="row">
                 <div class="col-xs-12 text-center">
                     <h3 class="text-danger">Valuation & Mass Appraisal</h3>
-                    <p class="description">CAMA (Computer Assisted Mass Appraisal) is a complicated concept. We strive
+                    <p class="description">Mass Appraisal, along with CAMA (Computer Assisted Mass Appraisal)
+                        integration, is a complicated concept. We strive
                         to simplify the confusion.
                         We have a knack for isolating what factors are throwing your ratio studies out of wack - and
                         developing plans to normalize where things went wrong.
