--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <link href='https://fonts.googleapis.com/css?family=Cambo|Poppins:400,600' rel='stylesheet' type='text/css'>
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
     <link href="assets/css/fonts/pe-icon-7-stroke.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Audiowide&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -95,10 +96,10 @@
                     <div class="title-area">
                         <p></p>
                         <img class="img-fluid" height="100vh" width="auto" src="./logo.png" />
-                        
-                        <h1 class="title-modern">McCormick Solutions</h1>
+                        <!-- <h3 style="font-family: 'Audiowide',cursive; font-size:100%;">APPRAISALS | ANALYTICS</h3> -->
                         <!-- <h3>Your neighborhood Appraisal & Tech Consultants</h3> -->
                             <div class="separator line-separator">♦</div>
+                            <p class="description">WE'VE GOT YOUR BACK</p>
                     </div>
 
                     <div class="button-get-started">
