--- a/services.html
+++ b/services.html
@@ -80,10 +80,10 @@
 
                         <img class="img-fluid" height="100vh" width="auto" src="./logo.png" />
                         <h3 style="font-family: 'Audiowide',cursive; font-size:100%;">APPRAISALS | ANALYTICS</h3>
-                            <div class="separator line-separator">♦</div>
-                            <p class="description">
-                               We've got your back
-                            </p>
+                        <div class="separator line-separator">♦</div>
+                        <p class="description">
+                            We've got your back
+                        </p>
                     </div>
                 </div>
 
@@ -362,6 +362,16 @@
                             </figure>
                         </div>
                     </div>
+                </div>
+                
+                <div class="col-xs-12 text-center">
+                        <h3 class="text-danger">Custom Solutions</h3>
+                        <p>Market modeling application to assist the Gwinnett County Tax Assessment office in the classification of comparable subdivisions throughout the county.
+                            With McCormick, you get more than a spreadsheet.
+                        </p>
+                    <video width="320" height="240" controls>
+                        <source src="./Gwinnett_County_Market_Model.mp4" type="video/mp4">
+                    </video>
                 </div>
             </div>
         </div>
